# AVSim

./: .gitignore  AVSim.cabal  AVSim.py  LICENSE  README.md  Run.py  avl.yml  avsim.py  compile  stack.yaml  teste.py
.stack-work/ghci/210f9192/: cabal_macros.h
.stack-work/ghci/23c92653/: cabal_macros.h
.stack-work/ghci/2b85163e/: cabal_macros.h
.stack-work/ghci/2ecd2b8e/: cabal_macros.h
.stack-work/ghci/32f73d40/: cabal_macros.h
.stack-work/ghci/41863363/: cabal_macros.h
.stack-work/ghci/47788229/: cabal_macros.h
.stack-work/ghci/4785dd39/: cabal_macros.h
.stack-work/ghci/4ff96ae9/: cabal_macros.h
.stack-work/ghci/5021f819/: cabal_macros.h
.stack-work/ghci/53331156/: cabal_macros.h
.stack-work/ghci/53fbd765/: cabal_macros.h
.stack-work/ghci/5a5396aa/: cabal_macros.h
Teams/: Team1.py  Team2.py  TeamDefault.py  sensors.py
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
files/: TeamsMethods.py  Tournament.py
json/: settings.json
scripts/: autoScroll.js  resize.js  updateImage.js
simulator/: Run.py
simulator/Teams/: Team1.py  Team2.py  __init__.py
simulator/files/: TeamsMethods.py  Tournament.py
simulator/json/: settings.json
src/: JSElem.dyn_hi  JSElem.dyn_o  JSElem.hi  JSElem.hs  Main.dyn_hi  Main.dyn_o  Main.hi  Main.hs  Pages.dyn_hi  Pages.dyn_o  Pages.hi  Pages.hs  UIElem.dyn_hi  UIElem.dyn_o  UIElem.hi  UIElem.hs
static/css/: index.css
static/js/: autoScroll.js  resize.js  updateImage.js
templates/: index.html
(+9 files in other folders)
