name:                AVSim
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/AVSim#readme
license:             BSD3
license-file:        LICENSE
author:              Gilmar Correia Jeronimo
maintainer:          gilmarcorreiajeronimo@gmail.com
copyright:           2020 AVSim
category:            Web, GUI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
  
Source-repository head
    type:               git
    location:           git://github.com/HeinrichApfelmus/threepenny-gui.git

executable AVSim
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       JSElem, Pages, UIElem
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, threepenny-gui, directory, safe, time, filepath, containers, jmacro, process, async, Win32
  ghc-options:         -O2 -rtsopts -eventlog -threaded
